# lazyflare

./: .gitignore  404.html  LICENSE  README.md  ROADMAP.html  hashmap.json  index.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml
assets/: ROADMAP.md.B9UO_Oj1.js  ROADMAP.md.B9UO_Oj1.lean.js  app.BzfkgP0S.js  app.DZ5t23so.js  app.shuIya8f.js  guide_cache-management.md.DQ2lmkGt.js  guide_cache-management.md.DQ2lmkGt.lean.js  guide_configuration.md.Ca1hFDWW.js  guide_configuration.md.Ca1hFDWW.lean.js  guide_dns-and-zones.md.Bv-LBytj.js  guide_dns-and-zones.md.Bv-LBytj.lean.js  guide_filtering-and-search.md.Wjdt-2w6.js  guide_filtering-and-search.md.Wjdt-2w6.lean.js  guide_getting-started.md.BqspAz2e.js  guide_getting-started.md.BqspAz2e.lean.js  guide_installation.md.DrZOaAN9.js  guide_installation.md.DrZOaAN9.lean.js  guide_kv-and-d1.md.B_eD0d8n.js  guide_kv-and-d1.md.B_eD0d8n.lean.js  guide_mock-mode.md.CecOEXLz.js  guide_mock-mode.md.CecOEXLz.lean.js  guide_navigation.md.OsUb1zfN.js  guide_navigation.md.OsUb1zfN.lean.js  guide_workers-and-pages.md.DjaXnSBa.js  guide_workers-and-pages.md.DjaXnSBa.lean.js  index.md.gciDuzdo.js  index.md.gciDuzdo.lean.js  reference_keybindings.md.BruIEckX.js  reference_keybindings.md.BruIEckX.lean.js  style.DwbKJSFG.css
guide/: cache-management.html  configuration.html  dns-and-zones.html  filtering-and-search.html  getting-started.html  installation.html  kv-and-d1.html  mock-mode.html  navigation.html  workers-and-pages.html
reference/: keybindings.html
search/: search_index.json
src/: app.py
stylesheets/: extra.css
(+22 files in other folders)
