[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyflare"
version = "2.0.0"
authors = [
  { name="AKHIL KRISHNA YADAV GORLA", email="akhilkrishnayadav59@gmail.com" },
]
description = "A fast, keyboard-driven Terminal User Interface (TUI) for Cloudflare."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=0.83.0",
    "cloudflare>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.8.2"
]

[project.urls]
"Homepage" = "https://github.com/akhil-krishna-02/lazyflare"
"Bug Tracker" = "https://github.com/akhil-krishna-02/lazyflare/issues"

[project.scripts]
lazyflare = "src.app:main"
